--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -25,6 +25,8 @@
         <activity android:name=".activity.HttpActivity"/>
 
         <activity android:name=".activity.UpDownActivity"/>
+
+        <activity android:name=".activity.TestEventBusActivity"/>
     </application>
 
 </manifest>
