--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -26,4 +26,5 @@ dependencies {
     compile 'com.android.support:palette-v7:22.1.1'
     compile project(path: ':corelibrary')
     compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'de.greenrobot:eventbus:3.0.0-beta1'
 }
