--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -27,6 +27,8 @@
         <activity android:name=".activity.UpDownActivity"/>
 
         <activity android:name=".activity.TestEventBusActivity"/>
+
+        <activity android:name=".activity.ImageActivity"/>
     </application>
 
 </manifest>
