--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -27,4 +27,5 @@ dependencies {
     compile project(path: ':corelibrary')
     compile 'com.jakewharton:butterknife:7.0.1'
     compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
