测试事件传递

--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -29,6 +29,8 @@
         <activity android:name=".activity.TestEventBusActivity"/>
 
         <activity android:name=".activity.ImageActivity"/>
+
+        <activity android:name=".activity.TestTouchEventActivity"/>
     </application>
 
 </manifest>
