--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -31,6 +31,10 @@
         <activity android:name=".activity.ImageActivity"/>
 
         <activity android:name=".activity.TestTouchEventActivity"/>
+
+        <activity android:name=".activity.DisplayFragmentActivity"/>
+
+        <activity android:name=".activity.VerticalScrollActivity"/>
     </application>
 
 </manifest>
