--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -35,6 +35,8 @@
         <activity android:name=".activity.DisplayFragmentActivity"/>
 
         <activity android:name=".activity.VerticalScrollActivity"/>
+
+        <activity android:name=".activity.StorageInAppActivity"/>
     </application>
 
 </manifest>
