--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity android:name=".activity.VerticalScrollActivity"/>
 
         <activity android:name=".activity.StorageInAppActivity"/>
+
+        <activity android:name=".activity.RxJavaAndroidActivity"/>
     </application>
 
 </manifest>
