--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -1,4 +1,5 @@
 apply plugin: 'com.android.application'
+apply plugin: 'org.greenrobot.greendao'
 
 android {
     compileSdkVersion 22
@@ -17,6 +18,9 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    greendao {
+        targetGenDir 'src/main/java'
+    }
 }
 
 dependencies {
@@ -31,4 +35,5 @@ dependencies {
     compile 'io.reactivex:rxandroid:1.2.1'
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:design:22.2.0'
+    compile 'org.greenrobot:greendao:3.0.1'
 }
