--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -40,6 +40,8 @@
         <activity android:name=".activity.StorageInAppActivity"/>
 
         <activity android:name=".activity.RxJavaAndroidActivity"/>
+
+        <activity android:name=".activity.GreenDaoActivity"/>
     </application>
 
 </manifest>
