--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -19,7 +19,7 @@ android {
         }
     }
     greendao {
-        schemaVersion 6
+        schemaVersion 14
         targetGenDir 'src/main/java'
     }
 }
@@ -37,4 +37,6 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:design:22.2.0'
     compile 'org.greenrobot:greendao:3.0.1'
+    compile 'net.zetetic:android-database-sqlcipher:3.5.2'
+//    compile 'org.greenrobot:greendao-encryption:2.2.2'
 }
