--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -46,6 +46,8 @@
         <activity android:name=".activity.RulerActivity"/>
 
         <activity android:name=".activity.BehaviourActivity"/>
+
+        <activity android:name=".activity.GradientActivity"/>
     </application>
 
 </manifest>
