--- a/YjyMoreFunctions/app./build.gradle
+++ b/YjyMoreFunctions/app./build.gradle
@@ -37,6 +37,7 @@ dependencies {
     compile 'io.reactivex:rxjava:1.1.6'
     compile 'com.android.support:design:22.2.0'
     compile 'org.greenrobot:greendao:3.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
 //    compile 'org.greenrobot:greendao-generator:3.0.0'
 //    compile 'net.zetetic:android-database-sqlcipher:3.5.2'
 //    compile 'org.greenrobot:greendao-encryption:2.2.2'
