--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".activity.BehaviourActivity"/>
 
         <activity android:name=".activity.GradientActivity"/>
+
+        <activity android:name=".activity.SgzActivity"/>
     </application>
 
 </manifest>
