--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -50,6 +50,8 @@
         <activity android:name=".activity.GradientActivity"/>
 
         <activity android:name=".activity.SgzActivity"/>
+
+        <activity android:name=".activity.ThreadPoolActivity"/>
     </application>
 
 </manifest>
