--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -52,6 +52,8 @@
         <activity android:name=".activity.SgzActivity"/>
 
         <activity android:name=".activity.ThreadPoolActivity"/>
+
+        <activity android:name=".activity.DisplayDialogFragment"/>
     </application>
 
 </manifest>
