--- a/YjyMoreFunctions/app./src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app./src/main/AndroidManifest.xml
@@ -54,6 +54,8 @@
         <activity android:name=".activity.ThreadPoolActivity"/>
 
         <activity android:name=".activity.DisplayDialogFragment"/>
+        
+        <activity android:name=".activity.ScrollerActivity"/>
     </application>
 
 </manifest>
