--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -59,6 +59,8 @@
         <activity android:name=".activity.ScrollerActivity"/>
 
         <activity android:name=".activity.WindowActivity"/>
+
+        <activity android:name=".activity.DrawActivity"/>
     </application>
 
 </manifest>
