--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile 'com.android.support:design:22.2.0'
     compile 'org.greenrobot:greendao:3.0.1'
     compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
 //    compile 'org.greenrobot:greendao-generator:3.0.0'
 //    compile 'net.zetetic:android-database-sqlcipher:3.5.2'
 //    compile 'org.greenrobot:greendao-encryption:2.2.2'
