--- a/YjyMoreFunctions/build.gradle
+++ b/YjyMoreFunctions/build.gradle
@@ -9,12 +9,17 @@ buildscript {
         classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+
     }
 }
 
 allprojects {
     repositories {
         jcenter()
+    }
+    configurations {
+        all*.exclude group: 'com.android.support', module: 'support-v4'
+        all*.exclude group: 'com.android.support', module: 'support-annotations'
     }
 }
 
