--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -90,6 +90,8 @@
         <activity android:name=".activity.Draw2Activity"/>
 
         <activity android:name=".activity.RefreshViewActivity"/>
+
+        <activity android:name=".activity.WebActivity"/>
     </application>
 
 </manifest>
