--- a/YjyMoreFunctions/corelibrary/build.gradle
+++ b/YjyMoreFunctions/corelibrary/build.gradle
@@ -27,4 +27,6 @@ dependencies {
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.alibaba:fastjson:1.1.52.android'
     compile 'com.orhanobut:logger:1.14'
+    compile 'com.jakewharton.picasso:picasso2-okhttp3-downloader:1.1.0'
+    compile 'com.squareup.picasso:picasso:2.5.2'
 }
