--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
+apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
+apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 22
@@ -24,8 +26,8 @@ android {
     }
 
     productFlavors {
-        m360{}
-        xiaomi{
+        m360 {}
+        xiaomi {
             applicationIdSuffix ".xiaomi"
         }
     }
@@ -37,21 +39,25 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    testCompile 'junit:junit:4.12'
-    compile 'com.android.support:appcompat-v7:22.1.1'
-    compile 'com.android.support:palette-v7:22.1.1'
     compile project(path: ':corelibrary')
-    compile 'com.jakewharton:butterknife:7.0.1'
-    compile 'de.greenrobot:eventbus:3.0.0-beta1'
-
-    compile 'io.reactivex:rxandroid:1.2.1'
-    compile 'io.reactivex:rxjava:1.1.6'
-    compile 'com.android.support:design:22.2.0'
-    compile 'org.greenrobot:greendao:3.0.1'
-    compile 'com.google.code.gson:gson:2.2.4'
 
     //    compile 'org.greenrobot:greendao-generator:3.0.0'
     //    compile 'net.zetetic:android-database-sqlcipher:3.5.2'
     //    compile 'org.greenrobot:greendao-encryption:2.2.2'
     compile files('libs/jsoup-1.8.1.jar')
+    compile "org.jetbrains.kotlin:kotlin-stdlib-jre7:$kotlin_version"
+    compile 'com.android.support:appcompat-v7:22.1.1'
+    compile 'com.android.support:palette-v7:22.1.1'
+    compile 'com.jakewharton:butterknife:7.0.1'
+    compile 'de.greenrobot:eventbus:3.0.0-beta1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
+    compile 'com.android.support:design:22.2.0'
+    compile 'org.greenrobot:greendao:3.0.1'
+    compile 'com.google.code.gson:gson:2.2.4'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
+}
+repositories {
+    mavenCentral()
 }
