--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -82,6 +82,7 @@
         <activity android:name=".activity.SpanTextActivity"/>
         <activity android:name=".activity.Behaviour1Activity"/>
         <activity android:name=".activity.Behaviour2Activity"/>
+        <activity android:name=".activity.PathMeasureActivity"/>
     </application>
 
 </manifest>
