--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -2,10 +2,18 @@ apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'org.greenrobot.greendao'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'android-apt'
 
+
+def javaVersion = JavaVersion.VERSION_1_7
 android {
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
+
+    compileOptions {
+        sourceCompatibility javaVersion
+        targetCompatibility javaVersion
+    }
 
     defaultConfig {
         applicationId "com.yjymorefunctions"
@@ -57,6 +65,13 @@ dependencies {
     compile 'com.google.code.gson:gson:2.2.4'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     testCompile 'junit:junit:4.12'
+    //使用APT生成工具，生成需要的DI代码
+    apt 'com.google.dagger:dagger-compiler:2.5'
+//JSR250的jar包，使用这个和使用glassFish的那个一样，仅为了使用@Inject 和@Named注解
+    provided 'javax.annotation:jsr250-api:1.0'
+//Dagger2 的依赖
+    compile 'com.google.dagger:dagger:2.5'
+
 }
 repositories {
     mavenCentral()
