--- a/YjyMoreFunctions/build.gradle
+++ b/YjyMoreFunctions/build.gradle
@@ -4,11 +4,13 @@ buildscript {
     ext.kotlin_version = '1.1.3-2'
     repositories {
         jcenter()
+        mavenCentral()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
         classpath 'org.greenrobot:greendao-gradle-plugin:3.0.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
 
@@ -17,7 +19,9 @@ buildscript {
 
 allprojects {
     repositories {
+        maven { url "https://www.jitpack.io" }
         jcenter()
+        mavenCentral()
     }
     configurations {
         all*.exclude group: 'com.android.support', module: 'support-v4'
