--- a/YjyMoreFunctions/app/src/main/AndroidManifest.xml
+++ b/YjyMoreFunctions/app/src/main/AndroidManifest.xml
@@ -83,6 +83,7 @@
         <activity android:name=".activity.Behaviour2Activity"/>
         <activity android:name=".activity.PathMeasureActivity"/>
         <activity android:name=".activity.DisplayDataActivity"/>
+        <activity android:name=".activity.TabbarActivity"/>
     </application>
 
 </manifest>
