--- a/YjyMoreFunctions/app/build.gradle
+++ b/YjyMoreFunctions/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'android-apt'
 
 def javaVersion = JavaVersion.VERSION_1_7
 android {
-    compileSdkVersion 22
-    buildToolsVersion "22.0.1"
+    compileSdkVersion 27
+    buildToolsVersion "27.0.2"
 
     compileOptions {
         sourceCompatibility javaVersion
@@ -73,7 +73,7 @@ dependencies {
     compile 'com.google.dagger:dagger:2.5'
 
 
-
+    compile 'com.github.bumptech.glide:glide:4.6.1'
 }
 repositories {
     mavenCentral()
