--- a/YjyMoreFunctions/build.gradle
+++ b/YjyMoreFunctions/build.gradle
@@ -5,6 +5,8 @@ buildscript {
     repositories {
         jcenter()
         mavenCentral()
+        maven { url "https://www.jitpack.io" }
+        maven { url 'https://maven.google.com' }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:2.1.3'
@@ -20,6 +22,7 @@ buildscript {
 allprojects {
     repositories {
         maven { url "https://www.jitpack.io" }
+        maven { url 'https://maven.google.com' }
         jcenter()
         mavenCentral()
     }
